<resources>
    <string name="app_name">Quizzer</string>
    <string name="quizzer">Quizzer</string>
    <string name="application_logo">Application Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="user_account_login">User Account Login</string>
    <string name="login_account">Login Account</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="already_have_account">Already have account</string>
    <string name="create_account">Create Account</string>
    <string name="create_user_account">Create User Account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="java_image">Java Image</string>
    <string name="domain_image">Domain Image</string>
    <string name="java_with_oops">Java with Oops</string>
    <string name="next_question">Next Question</string>
    <string name="quit_quiz">Quit Quiz</string>
    <string name="what_is_the_full_form_of_jvm_in_java">""</string>
    <string name="option_3">""</string>
    <string name="option_4">""</string>
    <string name="option_2">""</string>
    <string name="option_1">""</string>
    <string name="_30">30</string>
    <string name="back_to_home">Back to Home</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="instruction">Instruction</string>
    <string name="info">In this quiz you will be asked ten questions from your selected domain. Each question has 4 options, you have to attempt each question within 30 seconds. Each question is of 5 marks.</string>
    <string name="get_started_domain_name">Database Management System</string>
    <string name="select_catagery">Select Catagory</string>
    <string name="result">Result</string>
    <string name="logout_account">Logout Account</string>
    <string name="_0">0</string>
    <string name="your_score">Your Score</string>
    <string name="unattempted">Unattempted</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="right_answer">Right Answer</string>
    <string name="attempted">Attempted</string>
    <string name="total_question">Total Question</string>
    <string name="change_user_name">Change User Name</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="edit">Edit</string>
    <string name="user_profile">User Profile</string>
    <string name="logout_account_profile">"  Logout Account"</string>
    <string name="about_app">Quizzer is a quiz application developed by Suraj Pandey which is works using firebase. Application contains twelve domain, in all domain ten random questions will be ask with thirty second timer. User can see result how many questions attempt, right and wrong answered, attempt and Un-attempt question.</string>
</resources>