<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/quizzerLogoLogin"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/quizzer_logo"
            android:contentDescription="@string/application_logo" />

        <com.mursaat.extendedtextview.AnimatedGradientTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quizzerLogoLogin"
            android:layout_alignStart="@id/quizzerLogoLogin"
            android:layout_alignEnd="@id/quizzerLogoLogin"
            android:layout_marginTop="-20dp"
            android:text="@string/quizzer"
            android:gravity="center"
            android:textColor="@color/materialLime"
            android:textSize="35sp"
            android:textStyle="italic"
            app:angle="45"
            app:colors="@array/funny_colors"
            app:maxFPS="30"
            app:simultaneousColors="4"
            app:speed="1000" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="#FFC107"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#FFC107"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_account_login"
                android:textSize="25sp"
                android:gravity="center_horizontal"/>
            <View
                android:layout_width="225dp"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-2dp"
                android:background="@color/black"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="20sp"
                android:background="@drawable/edittext_background"
                android:hint="@string/email"/>
            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/password"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="2dp"
                android:textColor="@color/materialBlue"
                android:text="@string/forgot_password"/>

            <View
                android:layout_width="107dp"
                android:layout_height="1.8dp"
                android:layout_marginTop="-2dp"
                android:layout_gravity="end"
                android:background="#959393"/>

            <TextView
                android:id="@+id/loginBtnMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_account"
                android:padding="10dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:background="@drawable/login_btn_background"
                android:textSize="25sp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/createANewAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/create_a_new_account"
                android:textSize="22sp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>



    </androidx.cardview.widget.CardView>
</LinearLayout>