<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context=".GetStartWithQuiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:padding="10dp"
        android:background="#2196F3"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="100dp"
            android:backgroundTint="#2196F3"

            android:layout_gravity="center">

            <ImageView
                android:id="@+id/domainImageGetStart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_30"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/white"
                android:contentDescription="@string/domain_image" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/domainNameGetStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_started_domain_name"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:background="#2196F3"
        android:layout_weight="5">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instruction"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:gravity="center_horizontal"
                    android:layout_gravity="top"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_gravity="bottom"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_gravity="bottom"
        android:background="#2196F3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/startQuiz"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:background="@drawable/btn_get_start_bg"
                android:text="@string/start_quiz"
                app:drawableLeftCompat="@drawable/ic_baseline_play_arrow_24" />

            <TextView
                android:id="@+id/backToHome"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"
                android:background="@drawable/btn_get_start_bg"
                android:text="@string/back_to_home"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                app:drawableLeftCompat="@drawable/ic_baseline_arrow_back_24" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>