<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".QuizBoard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#FFC107"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:cardCornerRadius="100dp">

            <TextView
                android:id="@+id/questionCountDown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/_30"
                android:textColor="@color/materialRed"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#FFC107"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#2196F3"
            app:cardCornerRadius="30dp">

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/what_is_the_full_form_of_jvm_in_java"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="5"
        android:background="#FFC107"
        android:orientation="vertical"
        android:padding="10dp">

        <RadioGroup
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:labelFor="@id/option1"
                android:background="@drawable/option_background"
                android:paddingStart="20dp"
                android:button="@null"
                android:clickable="true"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/option_1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/option_background"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:button="@null"
                android:labelFor="@id/option2"
                android:clickable="true"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/option_2"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:labelFor="@id/option3"
                android:background="@drawable/option_background"
                android:paddingStart="20dp"
                android:button="@null"
                android:paddingTop="10dp"
                android:clickable="true"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/option_3"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:labelFor="@id/option4"
                android:background="@drawable/option_background"
                android:clickable="true"
                android:paddingStart="20dp"
                android:button="@null"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/option_4"
                android:textSize="20sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="10">

            <TextView
                android:id="@+id/quitQuiz"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:background="@drawable/quit_quiz_btn_bg"
                android:gravity="center"
                android:text="@string/quit_quiz"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nextQuestion"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="5"
                android:background="@drawable/next_qs_btn_bg"
                android:gravity="center"
                android:text="@string/next_question"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>