<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/quizzerLogoLogin"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/application_logo"
                    android:src="@drawable/quizzer_logo" />

                <com.mursaat.extendedtextview.AnimatedGradientTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/quizzerLogoLogin"
                    android:layout_alignStart="@id/quizzerLogoLogin"
                    android:layout_alignEnd="@id/quizzerLogoLogin"
                    android:layout_marginTop="-20dp"
                    android:gravity="center"
                    android:text="@string/quizzer"
                    android:textColor="@color/materialLime"
                    android:textSize="35sp"
                    android:textStyle="italic"
                    app:angle="45"
                    app:colors="@array/funny_colors"
                    app:maxFPS="30"
                    app:simultaneousColors="4"
                    app:speed="1000" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#FFC107"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/create_user_account"
                        android:textSize="25sp" />

                    <View
                        android:layout_width="225dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="-2dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/black" />

                    <EditText
                        android:id="@+id/userNameRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:autofillHints=""
                        android:background="@drawable/edittext_background"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="5dp"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:paddingStart="20dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="10dp"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/emailRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:autofillHints=""
                        android:background="@drawable/edittext_background"
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:drawablePadding="5dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="20dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="10dp"
                        android:textSize="20sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/edittext_background"
                        android:textColorHint="#fff"
                        app:hintEnabled="false"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/passwordRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_background"
                            android:drawableStart="@drawable/ic_baseline_lock_24"
                            android:drawablePadding="5dp"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingStart="20dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="20dp"
                            android:paddingBottom="10dp"
                            android:textSize="20sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/edittext_background"
                        android:textColorHint="#F8F8F8"
                        app:boxStrokeWidth="0dp"
                        app:hintEnabled="false"
                        app:boxStrokeWidthFocused="0dp"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/confirmPasswordRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_background"
                            android:drawableStart="@drawable/ic_baseline_lock_24"
                            android:drawablePadding="5dp"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:paddingStart="20dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="20dp"
                            android:paddingBottom="10dp"
                            android:textSize="20sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/createAccountMain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/login_btn_background"
                        android:padding="10dp"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:text="@string/create_account"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/alreadyHaveAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center_horizontal"
                        android:text="@string/already_have_account"
                        android:textSize="22sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>
</LinearLayout>